--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ lines.forEach((line, i) => {
 });
 
 // ================= TEXT DIGIT =================
-const mensagem = "TE AMO MANOELY ❤️";
+const mensagem = "JA TE AMEI MANOELY 👋👋";
 const textEl = document.getElementById("text");
 let idx = 0;
 
@@ -189,3 +189,4 @@ function falarComigo() {
 
 </body>
 </html>
+
