Restore index.html content with formatting fixes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ lines.forEach((line, i) => {
 });
 
 // ================= TEXT DIGIT =================
-const mensagem = "JA TE AMEI MANOELY 👋👋";
+const mensagem = "TE AMO MANOELY";
 const textEl = document.getElementById("text");
 let idx = 0;
 
@@ -189,4 +189,5 @@ function falarComigo() {
 
 </body>
 </html>
+
 
